--- a/.github/workflows/garm.yml
+++ b/.github/workflows/garm.yml
@@ -2,6 +2,9 @@ name: GARM test workflow
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - master
 jobs:
   garm:
     runs-on: [ ubuntu ]
