--- a/.github/workflows/arc.yaml
+++ b/.github/workflows/arc.yaml
@@ -6,7 +6,7 @@ jobs:
   Explore-GitHub-Actions:
     # You need to use the INSTALLATION_NAME from the previous step
     runs-on: arc-runner-set
-    container: ubuntu
+    container: gcc
     steps:
     - run: echo "🎉 This job uses runner scale set runners!"
     - run: |
