--- a/.github/workflows/arc.yaml
+++ b/.github/workflows/arc.yaml
@@ -9,6 +9,7 @@ jobs:
     container: gcc
     steps:
     - run: echo "🎉 This job uses runner scale set runners!"
+    - uses: actions/checkout@v4.2.2
     - uses: actions/setup-python@v5.4.0
     - run: |
         cd test
